--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,19 @@
 .navbar-brand {
 	font-family: 'Amatic SC', cursive;
 }
+
+.jumbotron{
+    position: relative;
+    padding:20 !important;
+    margin-top:30px !important;
+    background-image: url(../img/darkness.png);
+    text-align:center;
+    margin-bottom:5 !important;
+    color: #ffffff;
+    font-size: 200%;
+    font-family: 'Codystar', cursive; amazing
+}
+
+body {
+	background-image: url(../img/sakura.png);
+}
