--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Crimson{% endblock %}</title>
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Codystar|Amatic+SC:400,700" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     {% block stylesheet %}{% endblock %}
@@ -36,8 +36,8 @@
           {% else %}
           <form class="form-inline ml-auto">
             <a href="{% url 'login' %}" class="btn btn-warning">Log In</a>
-            <a href="{% url 'signup' %}" class="btn btn-warning ml-2">Sign Up</a> <!-- ml = margin-left -->
-            <a href="{% url 'contact' %}" class="btn btn-warning ml-2">Contact Us</a>
+            <a href="{% url 'signup' %}" class="btn btn-danger ml-2">Sign Up</a> <!-- ml = margin-left -->
+            <a href="{% url 'contact' %}" class="btn btn-primary ml-2">Contact Us</a>
           </form>
           {% endif %}
         </div>
