--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'css/app.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="jumbotron">
   <div class="container">
