--- a/static/css/app.css
+++ b/static/css/app.css
@@ -4,16 +4,24 @@
 
 .jumbotron{
     position: relative;
-    padding:20 !important;
-    margin-top:30px !important;
+    padding:70 !important;
+    margin-top:60px !important;
     background-image: url(../img/darkness.png);
     text-align:center;
-    margin-bottom:5 !important;
+    margin-bottom:0 !important;
     color: #ffffff;
-    font-size: 200%;
-    font-family: 'Codystar', cursive; amazing
+    font-size: 300%;
+    font-family: 'Codystar', cursive;
 }
 
 body {
 	background-image: url(../img/sakura.png);
 }
+
+.table {
+    border-radius: 2px;
+    width: 50%;
+    margin: 0px auto;
+    float: none;
+}
+
