--- a/templates/choose_skintone.html
+++ b/templates/choose_skintone.html
@@ -21,7 +21,7 @@
     {% for stype in stypes %}
     <tr>
       <td>{{ stype.name }}</td>
-      <td class="align-middle">{{ stype.image }}</td>
+      <td class="align-middle"><img src="{{ stype.image }}"></td>
       <td class="align-middle">{{ stype.description }}</td>
     </tr>
     {% endfor %}
