--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -11,7 +11,7 @@
           <div class="alert alert-success" role="alert">
             You have successfully changed your password! You may now proceed to log in.
           </div>
-          <a href="{% url 'login' %}" class="btn btn-warning btn-block">Return to Log In</a>
+          <a href="{% url 'login' %}" class="btn btn-danger btn-block">Return to Log In</a>
         </div>
       </div>
     </div>
