--- a/templates/password_reset_done.html
+++ b/templates/password_reset_done.html
@@ -9,7 +9,7 @@
         <div class="card-body">
           <h3 class="card-title" align="center">Reset Your Password</h3>
           <p>Check your email for a link to reset your password. If it doesn't appear within a few minutes, check your spam folder.</p>
-          <a href="{% url 'login' %}" class="btn btn-secondary btn-block">Return to Log In</a>
+          <a href="{% url 'login' %}" class="btn btn-danger btn-block">Return to Log In</a>
         </div>
       </div>
     </div>
