--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,10 @@
                 {{ user.username }}
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                <a class="dropdown-item" href="#">My account</a>
-                <a class="dropdown-item" href="#">Change password</a>
+                <a class="dropdown-item" href="#">My Account</a>
+                <a class="dropdown-item" href="{% url 'password_reset' %}">Change Password</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
               </div>
             </li>
           </ul>
