--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -7,12 +7,12 @@
     <div class="col-lg-4 col-md-6 col-sm-8">
       <div class="card">
         <div class="card-body">
-          <h3 class="card-title" align="center">Reset Your Password</h3>
+          <h3 class="card-title" align="center">Forgot Your Password?</h3>
           <p>Enter your email address and we will send you a link to reset your password.</p>
           <form method="post" novalidate>
             {% csrf_token %}
             {% include 'includes/form.html' %}
-            <button type="submit" class="btn btn-primary btn-block">Send password reset email</button>
+            <button type="submit" class="btn btn-danger btn-block">Send Password Reset Email</button>
           </form>
         </div>
       </div>
