added file upload functionality

--- a/templates/choose_undertone.html
+++ b/templates/choose_undertone.html
@@ -39,6 +39,6 @@
   </tbody>
 </table>
 
-<a href="{%url 'choose_undertone'%}"><button class="btn btn-danger" style="margin-left:37%;margin-right:0%;margin-top:5%;margin-bottom:2%">Know The Right Shades For You</button></a>
+<a href="{% url 'uhome' %}"><button class="btn btn-danger" style="margin-left:37%;margin-right:0%;margin-top:5%;margin-bottom:2%">Know The Right Shades For You</button></a>
 
 {% endblock %}
