fixed contact page

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                 <a class="dropdown-item" href="#">My Account</a>
                 <a class="dropdown-item" href="{% url 'password_reset' %}">Change Password</a>
+                <a class="dropdown-item" href="{% url 'contact' %}">Contact Us</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
               </div>
