--- a/static/css/accounts.css
+++ b/static/css/accounts.css
@@ -14,3 +14,11 @@ body {
 .logo a:active {
   text-decoration: none;
 }
+
+button {
+	font-family: 'Nunito Sans', sans-serif;
+	border: 2px solid red;
+    padding: 7px;
+    border-radius: 20px;
+    background-color: white;
+}
