--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
           {% else %}
           <form class="form-inline ml-auto">
             <a href="{% url 'login' %}" class="btn btn-warning">Log In</a>
-            <a href="{% url 'signup' %}" class="btn btn-danger ml-2">Sign Up</a> <!-- ml = margin-left -->
+            <a href="{% url 'signup' %}" class="btn btn-danger ml-2">Sign Up</a>
             <a href="{% url 'contact' %}" class="btn btn-primary ml-2">Contact Us</a>
           </form>
           {% endif %}
