--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Upload</title>
-  </head>
-  <body>
-    {% block content %}
-    {% endblock %}
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock %}
+
+{% block body %}
+<div class="container">
+	<h1 class="text-center logo my-4">
+		<a href="{% url 'home' %}">Crimson</a>
+	</h1>
+	{% block content %}
+	{% endblock %}
+</div>
+{% endblock %}
